--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,10 @@
     <artifactId>CollectionUtil</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+	<properties>
+		<jdk.version>1.7</jdk.version>
+	</properties>
+	
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
